--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/GeniusGaius/Digital-Marketing-Campaign-Analysis">Digital Marketing Campaign Analysis in Power BI<br />
+									<h2><a href="https://github.com/analyticalgaius/Digital-Marketing-Campaign-Analysis">Digital Marketing Campaign Analysis in Power BI<br />
 									</a></h2>
-									<p>In this project, we used Power BI to track returns on marketing investment (ROMI)<br />
-									across channels, and recommended high-impact budget reallocations.<br />
-									Discovered Youtube unfluencers drove $15M in return- vastly outperforming search and Facebook ads.</p>
+									<p>In this project, I analysed marketing efficiency-a common challenge in the digital<br />
+									advertising industry- using Power BI to uncover insights like high-ROMI channels.<br />
+									and underperforming campaigns. This type of analysis could help a company budget waste and improve ROI.</p>
 								</header>
-								<a href="https://github.com/GeniusGaius/Digital-Marketing-Campaign-Analysis" class="image main"><img src="images/diggity-marketing-SB0WARG16HI-unsplash-min.jpg" alt="" /></a>
+								<a href="https://github.com/analyticalgaius/Digital-Marketing-Campaign-Analysis" class="image main"><img src="images/diggity-marketing-SB0WARG16HI-unsplash-min.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/GeniusGaius/Digital-Marketing-Campaign-Analysis" class="button large">View Project</a></li>
+									<li><a href="https://github.com/analyticalgaius/Digital-Marketing-Campaign-Analysis" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -72,7 +72,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/GeniusGaius/Retail-Sales-Analysis" class="image fit"><img src="images/cyber-monday-shopping-sales-min.jpg" alt="" /></a>
-									<p>Power BI retail analytics project uncovering trends in customer behavior and sales performance. Insights driven by demographic, seasonal, and product data.</p>
+									<p>In this Project, I analysed sales anc customer behaviour to uncover top performing products, seasonality and impact of demography on sales. This type of analysis guides a businesss in refining promotions and drive more targeted sales strategies</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/GeniusGaius/Retail-Sales-Analysis" class="button">View Project</a></li>
 									</ul>
@@ -84,7 +84,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/GeniusGaius/Hotel-Booking-Analysis" class="image fit"><img src="images/hotel-booking-reservation-form-concept-min.jpg" alt="" /></a>
-									<p>Excel-based analysis of hotel booking trends and revenue performance. Insights into ADR, cancellations, customer segments, and seasonal demand.</p>
+									<p>This is an Excel-based analysis of hotel booking trends and revenue performance. Insights into ADR, cancellations, customer segments, and seasonal demand.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/GeniusGaius/Hotel-Booking-Analysis" class="button">View Project</a></li>
 									</ul>
@@ -96,7 +96,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/GeniusGaius/Women-Clothing-Review-Analysis" class="image fit"><img src="images/smiley-woman-shopping-clothing-store-min.jpg" alt="" /></a>
-									<p>An Excel-based analysis of customer reviews in women’s fashion. Uncovers satisfaction drivers, demographic engagement patterns, and product-specific insights to inform marketing, merchandising, and inventory strategy.</p>
+									<p>In this project, I used Excel to understand customer reviews in women’s fashion. Uncovers satisfaction drivers, demographic engagement patterns, and product-specific insights to inform marketing, merchandising, and inventory strategy.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/GeniusGaius/Women-Clothing-Review-Analysis" class="button">View Project</a></li>
 									</ul>
